<resources>

    <string name="app_name">EaseYourBurden</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_home">Home</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="keep_logged_in">Keep logged in</string>
    <string name="not_registered_">Not registered ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="signup">SignUp</string>
    <string name="name">Name</string>
    <string name="ok">OK</string>
    <string name="username_or_password_is_incorrect">Username or Password is incorrect.</string>
    <string name="please_enter_username_and_password">Please enter username and password.</string>
    <string name="menu_settings">TODO</string>
    <string name="expenditure">Expenditure</string>
    <string name="manager">Manager</string>
    <string name="creditor">Creditor</string>
    <string name="amount">Amount</string>
    <string name="debitor">Debitor</string>
    <string name="details">Details</string>
    <string name="settlement">Settle</string>
    <string name="total_expended_amount_by_you_on_others_">Expended amount by you on others:</string>
    <string name="total_expended_amount_by_others_on_you">Expended amount by others on you:</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="status">Status</string>
    <string name="balance_status">Balance status</string>
    <string name="search">Search</string>

</resources>