<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingLeft="15dp"
    android:paddingRight="15dp" >

    <LinearLayout
        android:id="@+id/LinearLayoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" 
        android:gravity="left|center_vertical">

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/total_expended_amount_by_others_on_you"
            android:singleLine="false"
            android:gravity="fill_horizontal"/>

        <TextView
            android:id="@+id/total_amount"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="4336.50/-"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:singleLine="true"
            android:gravity="left"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutMiddle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayoutTop"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/name" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/amount" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/details" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/settlement" />
    </LinearLayout>

    <ListView
        android:id="@+id/debits_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/LinearLayoutMiddle"
        android:layout_centerHorizontal="true" >
    </ListView>

</RelativeLayout>